[package]
name = "myeet-queue"
version = "0.1.0"
authors = ["Connor O'Hara <connor@s1nus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = "*"
async-std = "1.6.0"
futures = "0.3.5"
serde_json = "1.0"
serde = {version = "1.0.110", features = ["derive"]}
time = "0.1.37"
flurry = "0.3.1"
linked-hash-map = "0.5.3"
mysql = "18.2.0"
myeetlib = { path = "../myeetlib/" }
uuid = { version = "0.8.2", features=["v4"] }
