[package]
name = "myeet-serve"
version = "0.1.0"
authors = ["Connor O'Hara <connor@s1nus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = {version = "0.10.0", features=["async-std-runtime"]}
async-std = "1.6.0"
futures = "0.3.5"
serde_json = "1.0"
serde = {version = "1.0.110", features = ["derive"]}
time = "0.1.37"
mysql = "18.2.0"
uuid = {version = "0.8.1", features=["v4"]}
linked-hash-map = "0.5.3"
myeetlib = { path = "../myeetlib" }
